<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.cmput301.w19t06.theundesirablejackals.activities.MainHomeViewActivity"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayoutMainHomeViewActivityFragmentTabs"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:tabBackground="@color/tabBackgroundColor"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/tabIndicatorColor"
            app:tabIndicatorHeight="5dp"
            app:tabMode="fixed"
            app:tabPaddingEnd="12dp"
            app:tabPaddingStart="12dp"
            app:tabTextColor="@color/tabTextColor" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpagerMainHomeViewActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationViewMainHomeViewActivity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/additional_menu" />

</android.support.v4.widget.DrawerLayout>