<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/itemMenuProfile"
            android:icon="@drawable/ic_person_outline_grey_24dp"
            android:title="Profile" />
        <item
            android:id="@+id/itemMenuMessages"
            android:icon="@drawable/ic_chat_gray_24dp"
            android:title="Messages" />
        <item
            android:id="@+id/itemMenuBorrowRequests"
            android:icon="@drawable/ic_borrow_book"
            android:title="Borrow Requests" />
        <item
            android:id="@+id/itemMenuLendRequests"
            android:icon="@drawable/ic_lend_book"
            android:title="Lend Requests" />
        <item
            android:id="@+id/itemMenuFriends"
            android:icon="@drawable/ic_people_grey_24dp"
            android:title="Friends" />
        <item
            android:id="@+id/itemMenuFriendRequests"
            android:icon="@drawable/ic_person_add_grey_24dp"
            android:title="Friend Requests" />
        <item
            android:id="@+id/itemMenuDefaultPickupLocation"
            android:icon="@drawable/ic_pin_drop_grey_24dp"
            android:title="Default Pick Up Location" />

        <item
            android:id="@+id/itemMenuLogout"
            android:icon="@drawable/ic_exit_to_app_grey_24dp"
            android:title="Logout" />

    </group>

</menu>